--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -1455,6 +1455,14 @@ config.ebwizardry.reverse_scroll_direction=Scroll Direction
 config.ebwizardry.reverse_scroll_direction.tooltip=The scroll direction used to switch between spells on a wand while sneaking.
 config.ebwizardry.reverse_scroll_direction.true=Reversed
 config.ebwizardry.reverse_scroll_direction.false=Normal
+config.ebwizardry.show_spell_hud=Spell HUD
+config.ebwizardry.show_spell_hud.tooltip=Whether to show the spell HUD in the corner of the screen when holding a wand.
+config.ebwizardry.show_spell_hud.true=Shown
+config.ebwizardry.show_spell_hud.false=Hidden
+config.ebwizardry.show_charge_meter=Spell Charge Meter
+config.ebwizardry.show_charge_meter.tooltip=Whether to show the spell charge-up meter around the crosshairs when charging up a spell.
+config.ebwizardry.show_charge_meter.true=Shown
+config.ebwizardry.show_charge_meter.false=Hidden
 config.ebwizardry.spell_hud_position=Spell HUD Position
 config.ebwizardry.spell_hud_position.tooltip=The position of the spell HUD.
 config.ebwizardry.spell_hud_skin=Spell HUD Skin
