--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -382,6 +382,8 @@ item.ebwizardry\:charm_minion_health.name=Obsidian Zombie Head
 item.ebwizardry\:charm_minion_health.desc=Summoned creatures are 25%% stronger
 item.ebwizardry\:charm_minion_variants.name=Talisman of Transformation
 item.ebwizardry\:charm_minion_variants.desc=Summoned zombies are husks; summoned skeletons are strays
+item.ebwizardry\:charm_undead_helmets.name=Cursed Helm
+item.ebwizardry\:charm_undead_helmets.desc=Summoned zombies and skeletons have leather caps to protect them from sunlight
 item.ebwizardry\:charm_flight.name=Emerald Beetle Wing
 item.ebwizardry\:charm_flight.desc=Flight and Glide are 50%% faster
 item.ebwizardry\:charm_growth.name=Crystal Flower Charm
