--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -384,6 +384,8 @@ item.ebwizardry\:charm_minion_variants.name=Talisman of Transformation
 item.ebwizardry\:charm_minion_variants.desc=Summoned zombies are husks; summoned skeletons are strays
 item.ebwizardry\:charm_undead_helmets.name=Cursed Helm
 item.ebwizardry\:charm_undead_helmets.desc=Summoned zombies and skeletons have leather caps to protect them from sunlight
+item.ebwizardry\:charm_hunger_casting.name=Demonic Seal
+item.ebwizardry\:charm_hunger_casting.desc=When out of mana, hunger can be used to cast spells
 item.ebwizardry\:charm_flight.name=Emerald Beetle Wing
 item.ebwizardry\:charm_flight.desc=Flight and Glide are 50%% faster
 item.ebwizardry\:charm_growth.name=Crystal Flower Charm
