Add boulder spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -625,6 +625,7 @@ entity.ebwizardry\:hailstorm.name=Hailstorm
 entity.ebwizardry\:lightning_pulse.name=Lightning Pulse
 entity.ebwizardry\:stormcloud.name=Stormcloud
 entity.ebwizardry\:zombie_spawner.name=Zombie Spawner
+entity.ebwizardry\:boulder.name=Boulder
 
 itemGroup.ebwizardry=Wizardry
 itemGroup.ebwizardryspells=Spells
@@ -753,6 +754,7 @@ spell.ebwizardry\:black_hole=Black Hole
 spell.ebwizardry\:blinding_flash=Blinding Flash
 spell.ebwizardry\:blink=Blink
 spell.ebwizardry\:blizzard=Blizzard
+spell.ebwizardry\:boulder=Boulder
 spell.ebwizardry\:bubble=Bubble
 spell.ebwizardry\:chain_lightning=Chain Lightning
 spell.ebwizardry\:charge=Charge
@@ -933,6 +935,7 @@ spell.ebwizardry\:black_hole.desc=Tear reality asunder.
 spell.ebwizardry\:blinding_flash.desc=Emits an intense flash of light that blinds all nearby creatures.
 spell.ebwizardry\:blink.desc=Teleports the caster over a short distance to where they are pointing.
 spell.ebwizardry\:blizzard.desc=Creates a zone of swirling icy wind which slows and continually damages anything trapped inside. The caster is immune to the damage but is still slowed.
+spell.ebwizardry\:boulder.desc="Let the world be my bowling alley, and my foes be the pins!"
 spell.ebwizardry\:bubble.desc=Fires a jet of bubbles which causes anything it hits to float upwards helplessly. The target will fall after a certain time or if it is damaged.
 spell.ebwizardry\:chain_lightning.desc=Fires a spark of lightning at the target, which then chains to additional targets up to twice.
 spell.ebwizardry\:charge.desc=Causes the caster to charge rapidly in the direction they are looking, damaging and knocking back anything in their path.
