Add mark sacrifice spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -852,6 +852,7 @@ spell.ebwizardry\:lightning_ray=Lightning Ray
 spell.ebwizardry\:lightning_sigil=Lightning Sigil
 spell.ebwizardry\:lightning_web=Lightning Web
 spell.ebwizardry\:magic_missile=Magic Missile
+spell.ebwizardry\:mark_sacrifice=Mark Sacrifice
 spell.ebwizardry\:metamorphosis=Metamorphosis
 spell.ebwizardry\:meteor=Meteor
 spell.ebwizardry\:mind_control=Mind Control
@@ -1033,6 +1034,7 @@ spell.ebwizardry\:lightning_ray.desc=Creates a stream of lightning in the direct
 spell.ebwizardry\:lightning_sigil.desc=Places a magical lightning trap on the ground which damages the creature that triggers it and chains lightning to other nearby creatures.
 spell.ebwizardry\:lightning_web.desc="Focus. Channel the storm in your mind through your wand and unleash its fury."
 spell.ebwizardry\:magic_missile.desc=Fires a bolt of magical energy in the direction you are pointing.
+spell.ebwizardry\:mark_sacrifice.desc=Marks the target as a divine sacrifice. The next magical attack on a marked creature deals 60%% extra damage for each level of the effect.
 spell.ebwizardry\:metamorphosis.desc=Changes the target into another form. Only works on some creatures.
 spell.ebwizardry\:meteor.desc=Some wizards just want to see the world burn...
 spell.ebwizardry\:mind_control.desc=Takes control of the target's mind for 30 seconds, causing it switch sides and fight for the caster instead. Will not work on creatures that are too strong-willed.
