--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -678,7 +678,18 @@ advancement.ebwizardry\:artefact.desc=Lift the protective enchantments from a sh
 advancement.ebwizardry\:all_artefacts=A Veritable Museum
 advancement.ebwizardry\:all_artefacts.desc=Collect all of the rings, amulets and charms
 
-advancement.ebwizardry\:armour_set=Now You're a Proper Wizard
+advancement.ebwizardry\:defeat_remnant=Dust Off Your Arrows
+advancement.ebwizardry\:defeat_remnant.desc=Hunt down the remnants guarding an obelisk and collect their spectral dust
+advancement.ebwizardry\:find_library_ruins=I Think My Books Are Overdue
+advancement.ebwizardry\:find_library_ruins.desc=Uncover the ruins of a forgotten library
+advancement.ebwizardry\:restore_imbuement_altar=Good As New
+advancement.ebwizardry\:restore_imbuement_altar.desc=Restore an imbuement altar to its former glory
+advancement.ebwizardry\:create_elemental_armour=Changing Clothes
+advancement.ebwizardry\:create_elemental_armour.desc=Imbue a piece of wizard armour with the power of one of the arcane elements
+advancement.ebwizardry\:craft_lectern=Arcane Encyclopaedia
+advancement.ebwizardry\:craft_lectern.desc=Craft a lectern to keep track of your spell library
+
+advancement.ebwizardry\:armour_set=Now You're A Proper Wizard
 advancement.ebwizardry\:armour_set.desc=Craft and equip a full set of wizard armour
 advancement.ebwizardry\:legendary=Legendary
 advancement.ebwizardry\:legendary.desc=Obtain a piece of legendary wizard armour
