Better advancement description

--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -685,7 +685,7 @@ advancement.ebwizardry\:find_library_ruins.desc=Uncover the ruins of a forgotten
 advancement.ebwizardry\:restore_imbuement_altar=Good As New
 advancement.ebwizardry\:restore_imbuement_altar.desc=Restore an imbuement altar to its former glory
 advancement.ebwizardry\:create_elemental_armour=Changing Clothes
-advancement.ebwizardry\:create_elemental_armour.desc=Imbue a piece of wizard armor with the power of one of the arcane elements
+advancement.ebwizardry\:create_elemental_armour.desc=Imbue a piece of wizard armor with spectral dust of one of the arcane elements
 advancement.ebwizardry\:craft_lectern=Arcane Encyclopedia
 advancement.ebwizardry\:craft_lectern.desc=Craft a lectern to keep track of your spell library
 
