Add evoker's ring

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -310,6 +310,8 @@ item.ebwizardry\:ring_earth_biome.name=Dryad's Ring
 item.ebwizardry\:ring_earth_biome.desc=Earth spells are 30%% more potent in forests and roofed forests
 item.ebwizardry\:ring_full_moon.name=Ring of the Howling Wolf
 item.ebwizardry\:ring_full_moon.desc=Earth spells have dramatically reduced cooldowns under a full moon
+item.ebwizardry\:ring_evoker.name=Evoker's Ring
+item.ebwizardry\:ring_evoker.desc=Sneaking while casting fangs summons a defensive circle instead of a line
 item.ebwizardry\:ring_extraction.name=Ring of Extraction
 item.ebwizardry\:ring_extraction.desc=Kills with sorcery spells grant bonus mana
 item.ebwizardry\:ring_mana_return.name=Ring of the Perfectionist
