--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -629,6 +629,7 @@ entity.ebwizardry\:stormcloud.name=Stormcloud
 entity.ebwizardry\:zombie_spawner.name=Zombie Spawner
 entity.ebwizardry\:boulder.name=Boulder
 entity.ebwizardry\:radiant_totem.name=Radiant Totem
+entity.ebwizardry\:withering_totem.name=Withering Totem
 
 itemGroup.ebwizardry=Wizardry
 itemGroup.ebwizardryspells=Spells
@@ -938,6 +939,7 @@ spell.ebwizardry\:water_breathing=Water Breathing
 spell.ebwizardry\:whirlwind=Whirlwind
 spell.ebwizardry\:wither=Wither
 spell.ebwizardry\:wither_skull=Wither Skull
+spell.ebwizardry\:withering_totem=Withering Totem
 spell.ebwizardry\:zombie_apocalypse=Zombie Apocalypse
 
 spell.ebwizardry\:agility.desc=Grants the caster faster movement speed and greater jump height for 30 seconds.
@@ -1120,6 +1122,7 @@ spell.ebwizardry\:water_breathing.desc=Allows the caster to breathe underwater f
 spell.ebwizardry\:whirlwind.desc=Causes the target to be blown upwards and away from you at speed.
 spell.ebwizardry\:wither.desc=Fires a ray of darkness which withers anything it touches.
 spell.ebwizardry\:wither_skull.desc=Launches a wither skull in the direction you are pointing.
+spell.ebwizardry\:withering_totem.desc=Summons a withering totem where you are pointing, which slowly drains health from nearby creatures. After 30 seconds, the totem explodes, releasing a wave of withering energy that deals more damage the more health that was drained.
 spell.ebwizardry\:zombie_apocalypse.desc=Opening a portal to the underworld is easy. The difficult part is shutting it again when things go wrong...
 
 spell.ebwizardry\:invoke_weather.sun=The rain begins to stop...
