Add tip-top tooltip with top tips for snazzy super-speedy spell searching system And confusingly convoluted commit comments

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -720,6 +720,7 @@ container.ebwizardry\:arcane_workbench.bookshelves=Bookshelves
 container.ebwizardry\:arcane_workbench.sort_tier=Sort by Tier
 container.ebwizardry\:arcane_workbench.sort_element=Sort by Element
 container.ebwizardry\:arcane_workbench.sort_alphabetical=Sort Alphabetically
+container.ebwizardry\:arcane_workbench.search_tooltip=%1$sSearch Tips\n\ntier=%2$s, %1$st=%2$s: match tiers\n%1$selement=%2$s, %1$se=%2$s: match elements\n%1$stype=%2$s, %1$sp=%2$s: match spell types\n%1$sdiscovered=true/false%2$s, %1$sd=t/f%2$s: include only (un)discovered\n%1$smodid=%2$s, %1$sm=%2$s: match mod IDs\n\nSeparate multiple values with %1$s,%2$s\nSeparate multiple criteria with %1$s;
 
 container.ebwizardry\:bookshelf=Bookshelf
 
