--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -1332,9 +1332,11 @@ config.ebwizardry.players_move_each_other.tooltip=Whether to allow players to mo
 config.ebwizardry.players_move_each_other.true=Yes - let the games begin!
 config.ebwizardry.players_move_each_other.false=No - I won't be pushed around
 config.ebwizardry.player_block_damage=Player Block Damage
-config.ebwizardry.player_block_damage.tooltip=Whether spells cast by players can destroy blocks in the world. Disable this to prevent griefing. To prevent non-players from destroying blocks with magic, use the mobGriefing gamerule.
+config.ebwizardry.player_block_damage.tooltip=Whether spells cast by players can destroy blocks in the world. Wizardry makes every attempt to respect protection mods and plugins, but cannot guarantee it will work in all cases for every mod. If you need absolutely watertight anti-grief, disable this setting. (N.B. This setting only affects players. To prevent mobs from destroying blocks with magic, use the mobGriefing gamerule.)
 config.ebwizardry.player_block_damage.true=Yes - kaboom!
 config.ebwizardry.player_block_damage.false=No - activate anti-grief (TM)
+config.ebwizardry.dispenser_block_damage=Dispenser Block Damage
+config.ebwizardry.dispenser_block_damage.tooltip=Whether spells cast by dispensers can destroy blocks in the world. Wizardry makes every attempt to respect protection mods and plugins, but cannot guarantee it will work in all cases for every mod. If you need absolutely watertight anti-grief, disable this setting.
 config.ebwizardry.telekinetic_disarmament=Telekinetic Disarmament
 config.ebwizardry.telekinetic_disarmament.tooltip=Whether to allow players to disarm other players using the telekinesis spell. Disable to prevent stealing of items.
 config.ebwizardry.telekinetic_disarmament.true=Yes - let people steal things
