Add frost barrier spell

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -829,6 +829,7 @@ spell.ebwizardry\:forest_of_thorns=Forest of Thorns
 spell.ebwizardry\:freeze=Freeze
 spell.ebwizardry\:freezing_weapon=Freezing Weapon
 spell.ebwizardry\:frost_axe=Frost Axe
+spell.ebwizardry\:frost_barrier=Frost Barrier
 spell.ebwizardry\:frost_ray=Frost Ray
 spell.ebwizardry\:frost_sigil=Frost Sigil
 spell.ebwizardry\:frost_step=Frost Step
@@ -1012,6 +1013,7 @@ spell.ebwizardry\:forest_of_thorns.desc=Amidst the wood lies a hidden glade,\nIn
 spell.ebwizardry\:freeze.desc=Freezes the target for 10 seconds. Will also freeze water and create snow on the ground.
 spell.ebwizardry\:freezing_weapon.desc=Temporarily imbues the first weapon on the caster's hotbar with the power of frost, causing it to freeze its victims. The magic wears off after 45 seconds.
 spell.ebwizardry\:frost_axe.desc=Creates a frozen axe which freezes enemies when hit. Lasts for 30 seconds.
+spell.ebwizardry\:frost_barrier.desc=Creates a barricade of ice in front of the caster that shields them from incoming attacks. The barrier lasts for 20 seconds.
 spell.ebwizardry\:frost_ray.desc=Creates a stream of frost in the direction you are pointing which slows and continually damages targets.
 spell.ebwizardry\:frost_sigil.desc=Places a magical ice trap on the ground which damages and freezes the creature that triggers it.
 spell.ebwizardry\:frost_step.desc=Allows the caster to freeze water as they walk for 30 seconds.
