--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -399,6 +399,8 @@ item.ebwizardry\:charm_abseiling.name=Enchanted Twine
 item.ebwizardry\:charm_abseiling.desc=Holding sneak whilst grappling slowly pays out the line
 item.ebwizardry\:charm_silk_touch.name=Moonstone Orb
 item.ebwizardry\:charm_silk_touch.desc=Blocks broken with the mine spell always drop themselves
+item.ebwizardry\:charm_sixth_sense.name=Dire Wolf Pelt
+item.ebwizardry\:charm_sixth_sense.desc=Sixth sense displays different colours for passive, neutral and hostile mobs
 item.ebwizardry\:charm_stop_time.name=Peculiar Pocketwatch
 item.ebwizardry\:charm_stop_time.desc=The slow time spell makes time stand still
 item.ebwizardry\:charm_light.name=Elevinia's Everburning Lantern
