--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -281,6 +281,8 @@ item.ebwizardry\:ring_fire_biome.name=Ring of the Desert Sun
 item.ebwizardry\:ring_fire_biome.desc=Fire spells are 30%% more potent in hot biomes
 item.ebwizardry\:ring_disintegration.name=Ring of Searing Embers
 item.ebwizardry\:ring_disintegration.desc=All fire attack spells cause their victims to disintegrate
+item.ebwizardry\:ring_meteor.name=Ring of Volthraa
+item.ebwizardry\:ring_meteor.desc=Instead of falling from the sky, meteor can be aimed like a projectile
 item.ebwizardry\:ring_ice_melee.name=Ring of Icy Touch
 item.ebwizardry\:ring_ice_melee.desc=Hitting a creature with an ice wand gives it the frostbite effect
 item.ebwizardry\:ring_ice_biome.name=Ring of Glaciation
