--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -346,6 +346,8 @@ item.ebwizardry\:amulet_ice_immunity.name=Permafrost Amulet
 item.ebwizardry\:amulet_ice_immunity.desc=Grants total immunity to frostbite effects
 item.ebwizardry\:amulet_ice_protection.name=Frostbound Amulet
 item.ebwizardry\:amulet_ice_protection.desc=Reduces frost damage by 30%%
+item.ebwizardry\:amulet_frost_warding.name=Amulet of Esundor
+item.ebwizardry\:amulet_frost_warding.desc=Grants a warding effect when standing behind a wall of frost
 item.ebwizardry\:amulet_potential.name=Amulet of Potential
 item.ebwizardry\:amulet_potential.desc=Grants a 15%% chance to shoot lightning at creatures that melee attack you
 item.ebwizardry\:amulet_channeling.name=Amulet of Channeling
