--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -810,6 +810,7 @@ spell.ebwizardry\:divination=Divination
 spell.ebwizardry\:dragon_fireball=Dragon Fireball
 spell.ebwizardry\:earthquake=Earthquake
 spell.ebwizardry\:empowering_presence=Empowering Presence
+spell.ebwizardry\:enrage=Enrage
 spell.ebwizardry\:entrapment=Entrapment
 spell.ebwizardry\:evade=Evade
 spell.ebwizardry\:fangs=Fangs
@@ -994,6 +995,7 @@ spell.ebwizardry\:divination.desc=Guides the caster to nearby ores and resources
 spell.ebwizardry\:dragon_fireball.desc=Launches an enderdragon fireball in the direction you are pointing, which releases lingering poisonous clouds on impact.
 spell.ebwizardry\:earthquake.desc=A true master of earth magic can move mountains.
 spell.ebwizardry\:empowering_presence.desc=Grants the caster and nearby allies increased magic damage for 30 seconds.
+spell.ebwizardry\:enrage.desc=Causes nearby creatures to become enraged, stopping whatever they are doing to attack the caster instead.
 spell.ebwizardry\:entrapment.desc=Traps the target in a sphere of darkness which pulls it helplessly upwards and continually damages it.
 spell.ebwizardry\:evade.desc=Causes the caster to quickly jump sideways to dodge incoming attacks.
 spell.ebwizardry\:fangs.desc=Summons a row of evoker fangs in front of the caster that rise from the ground, biting mobs in their path.
