Add Lokenzen's ring

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -299,6 +299,8 @@ item.ebwizardry\:ring_seeking.name=Ring of Attraction
 item.ebwizardry\:ring_seeking.desc=All projectile spells seek their targets
 item.ebwizardry\:ring_hammer.name=Ring of Thalek the Almighty
 item.ebwizardry\:ring_hammer.desc=Lightning hammers can be picked up and thrown
+item.ebwizardry\:ring_stormcloud.name=Lokenzen's Ring
+item.ebwizardry\:ring_stormcloud.desc=Stormcloud moves towards targets and lasts longer with every strike
 item.ebwizardry\:ring_soulbinding.name=Soulwalker's Ring
 item.ebwizardry\:ring_soulbinding.desc=Creatures damaged by necromancy spells become soulbound to you
 item.ebwizardry\:ring_leeching.name=Ring of Leeching
