--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -850,6 +850,7 @@ spell.ebwizardry\:greater_telekinesis=Greater Telekinesis
 spell.ebwizardry\:greater_ward=Greater Ward
 spell.ebwizardry\:group_heal=Group Heal
 spell.ebwizardry\:growth_aura=Growth Aura
+spell.ebwizardry\:guardian_beam=Guardian Beam
 spell.ebwizardry\:hailstorm=Hailstorm
 spell.ebwizardry\:heal=Heal
 spell.ebwizardry\:heal_ally=Heal Ally
@@ -1035,6 +1036,7 @@ spell.ebwizardry\:greater_telekinesis.desc=Allows the caster to pick up a block 
 spell.ebwizardry\:greater_ward.desc=Grants the caster a strong shielding effect that greatly reduces incoming magic damage for 30 seconds.
 spell.ebwizardry\:group_heal.desc=Heals the caster and all nearby allies and summoned creatures by 3 hearts.
 spell.ebwizardry\:growth_aura.desc=Grows all crops near the caster. Also grows tall grass and flowers on grass.
+spell.ebwizardry\:guardian_beam.desc=Fires a guardian eye beam in the direction you are pointing, which damages targets and depletes their air supply when underwater.
 spell.ebwizardry\:hailstorm.desc=It was during the great winter of the third age that the ice mages discovered their true power.
 spell.ebwizardry\:heal.desc=Heals the caster by 2 hearts.
 spell.ebwizardry\:heal_ally.desc=Heals the target by 2 and a half hearts.
