--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -785,6 +785,7 @@ spell.ebwizardry\:blink=Blink
 spell.ebwizardry\:blizzard=Blizzard
 spell.ebwizardry\:boulder=Boulder
 spell.ebwizardry\:bubble=Bubble
+spell.ebwizardry\:celestial_smite=Celestial Smite
 spell.ebwizardry\:chain_lightning=Chain Lightning
 spell.ebwizardry\:charge=Charge
 spell.ebwizardry\:clairvoyance=Clairvoyance
@@ -971,6 +972,7 @@ spell.ebwizardry\:blink.desc=Teleports the caster over a short distance to where
 spell.ebwizardry\:blizzard.desc=Creates a zone of swirling icy wind which slows and continually damages anything trapped inside. The caster is immune to the damage but is still slowed.
 spell.ebwizardry\:boulder.desc="Let the world be my bowling alley, and my foes be the pins!"
 spell.ebwizardry\:bubble.desc=Fires a jet of bubbles which causes anything it hits to float upwards helplessly. The target will fall after a certain time or if it is damaged.
+spell.ebwizardry\:celestial_smite.desc="Oh powers divine, I call upon thee now! Rid this land of dark creatures most foul!"
 spell.ebwizardry\:chain_lightning.desc=Fires a spark of lightning at the target, which then chains to additional targets up to twice.
 spell.ebwizardry\:charge.desc=Causes the caster to charge rapidly in the direction they are looking, damaging and knocking back anything in their path.
 spell.ebwizardry\:clairvoyance.desc=Reveals the path to a remembered location. With this spell selected, sneak-right-click on a block to set the location. Cast this spell normally to reveal the path. The path will fade after 90 seconds.
@@ -1008,7 +1010,7 @@ spell.ebwizardry\:firebomb.desc=Lanches a firebomb in the direction you are poin
 spell.ebwizardry\:fire_resistance.desc=Grants the caster fire resistance for 30 seconds.
 spell.ebwizardry\:fire_sigil.desc=Places a magical fire trap on the ground which damages and sets on fire the creature that triggers it.
 spell.ebwizardry\:fireskin.desc=Cloaks the caster in flames for 30 seconds, causing anything that attacks them to catch fire.
-spell.ebwizardry\:firestorm.desc="Purge the land and purge the soil!\nTrees shall burn and lakes shall boil!\nTorch the wood and scorch the stone!\nAll bow before the fiery throne!"
+spell.ebwizardry\:firestorm.desc="Purge the land and purge the soil!\nTrees shall burn and lakes shall boil!\nTorch the wood and scorch the stone!\nAll bow before the infernal throne!"
 spell.ebwizardry\:fire_breath.desc="I am the dragon."
 spell.ebwizardry\:flame_ray.desc=Creates a stream of flames in the direction you are pointing which sets on fire and continually damages targets.
 spell.ebwizardry\:flaming_axe.desc=Creates a flaming axe which sets enemies on fire when hit. Lasts for 30 seconds.
