--- a/src/main/resources/assets/ebwizardry/lang/en_us.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_us.lang
@@ -891,6 +891,7 @@ spell.ebwizardry\:meteor=Meteor
 spell.ebwizardry\:mind_control=Mind Control
 spell.ebwizardry\:mind_trick=Mind Trick
 spell.ebwizardry\:mine=Mine
+spell.ebwizardry\:mirage=Mirage
 spell.ebwizardry\:muffle=Muffle
 spell.ebwizardry\:none=[Empty Slot]
 spell.ebwizardry\:oakflesh=Oakflesh
@@ -1078,6 +1079,7 @@ spell.ebwizardry\:meteor.desc=Some wizards just want to see the world burn...
 spell.ebwizardry\:mind_control.desc=Takes control of the target's mind for 30 seconds, causing it switch sides and fight for the caster instead. Will not work on creatures that are too strong-willed.
 spell.ebwizardry\:mind_trick.desc=Confuses and disorients the target for 15 seconds, rendering it unable to attack effectively. The effect will be dispelled if the target takes damage.
 spell.ebwizardry\:mine.desc=Breaks the block the caster is looking at. Potency will allow harder blocks to be broken.
+spell.ebwizardry\:mirage.desc=Creates an illusion where the caster appears to be a few blocks away from their actual position, blinking around every few seconds. The illusion lasts for 20 seconds.
 spell.ebwizardry\:muffle.desc=Silences any sounds made by the caster for 30 seconds. When muffled, mobs can only detect you when looking towards you.
 spell.ebwizardry\:none.desc=To get a spell book with the /give command, use id\: /give [player] ebwizardry\:spell_book 1 [spell id] (if you found this book in a chest, some other mod has messed things up).
 spell.ebwizardry\:oakflesh.desc=Improves the caster's damage resistance for 30 seconds.
@@ -1251,6 +1253,7 @@ potion.ebwizardry\:curse_of_enfeeblement=Curse of Enfeeblement
 potion.ebwizardry\:curse_of_undeath=Curse of Undeath
 potion.ebwizardry\:containment=Containment
 potion.ebwizardry\:frost_step=Frost Step
+potion.ebwizardry\:mirage=Mirage
 
 enchantment.ebwizardry\:magic_sword=Imbuement
 enchantment.ebwizardry\:magic_bow=Imbuement
