Add localisation for mark of sacrifice effect

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -1253,6 +1253,7 @@ potion.ebwizardry\:curse_of_enfeeblement=Curse of Enfeeblement
 potion.ebwizardry\:curse_of_undeath=Curse of Undeath
 potion.ebwizardry\:containment=Containment
 potion.ebwizardry\:frost_step=Frost Step
+potion.ebwizardry\:mark_of_sacrifice=Mark of Sacrifice
 potion.ebwizardry\:mirage=Mirage
 
 enchantment.ebwizardry\:magic_sword=Imbuement
