Add config option to change progression requirements

--- a/src/main/resources/assets/ebwizardry/lang/en_gb.lang
+++ b/src/main/resources/assets/ebwizardry/lang/en_gb.lang
@@ -1401,6 +1401,8 @@ config.ebwizardry.minion_revenge_targeting.true=Yes - I'd never hurt them!
 config.ebwizardry.minion_revenge_targeting.false=No - they must always obey me!
 config.ebwizardry.forfeit_chance=Forfeit Chance
 config.ebwizardry.forfeit_chance.tooltip=The chance to 'misread' an undiscovered spell and trigger a forfeit instead. Setting this to 0 effectively disables the forfeit mechanic. Has no effect if discovery mode is disabled.
+config.ebwizardry.progression_requirements=Progression Requirements
+config.ebwizardry.progression_requirements.tooltip=The progression required to upgrade a wand to each tier (apprentice, advanced and master respectively).
 config.ebwizardry.player_damage_scaling=Player Damage Scaling Factor
 config.ebwizardry.player_damage_scaling.tooltip=Global damage scaling factor for the damage dealt by players casting spells, relative to 1.
 config.ebwizardry.npc_damage_scaling=NPC Damage Scaling Factor
